Fixes #851: wrap text on button so that the button will be limited to box size

--- a/public/css/canonizer.css
+++ b/public/css/canonizer.css
@@ -2009,3 +2009,8 @@ a.verification-link:active {
   }
 
   .sub-title {font-size: .7rem}
+
+  .btn-historysmt {
+      max-width: 100%;
+      white-space: unset;
+  }
